# RSSia

./: .gitignore  CHANGELOG.md  README.md  check_alice_subscriptions.py  docker-compose.yml  test_api_integration.js  test_integration.js
backend/: ARCHITECTURE_TEST_REPORT.md  Dockerfile  README.md  check_alice_subscriptions.py  check_config_compliance.py  create_test_data.py  create_test_user.py  create_test_users.py  env.example  field_standardization_checker.py  init_db.py  optimized_prompt_template.txt  pyproject.toml  rss_raw_analysis.py  test_new_config_verification.py  verify_system.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/api_v1/: __init__.py  api.py
backend/app/api/api_v1/endpoints/: __init__.py  auth.py  content.py  fetch_config_api.py  health.py  subscription_config.py  subscription_search.py  subscriptions.py  (+4 more)
backend/app/config/: database.py  platform_config.py  subscription_config.py  template_loader.py
backend/app/core/: config.py  database_manager.py
backend/app/database/: content_schema.sql  fetch_control_schema.sql  shared_content_schema.sql
backend/app/models/: content.py  subscription.py  template.py
backend/app/scheduler/: tag_scheduler.py
backend/app/services/: __init__.py  ai_content_processor.py  ai_service_manager.py  auto_fetch_scheduler.py  content_deduplication_service.py  content_processing_utils.py  database_service.py  enhanced_rss_service.py  fetch_config_service.py  fetch_limit_service.py  fetch_scheduler.py  rss_content_service.py  rss_demo_service.py  search_service.py  shared_content_service.py  subscription_service.py  tag_cache_service.py  user_content_relation_service.py  user_service.py
backend/scripts/: data_structure_analyzer.py  fetch_rss_raw.py  vector_search.py
(+92 files in other folders)
